nuevos cambios de estilo

--- a/CRUDASP/Views/Inicio/detalle.cshtml
+++ b/CRUDASP/Views/Inicio/detalle.cshtml
@@ -15,9 +15,9 @@
 
                 <div>
                    
-                    <dl class="row">
-                       
-                        <dt class="col-sm-5">
+                    <dl class="row text-black   ">
+                        
+                        <dt class="col-sm-5 tex">
                             @Html.DisplayNameFor(model => model.Nombre)
                         </dt>
                         <dd class="col-sm-10">
