--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -14,7 +14,7 @@
                 <div class="table-responsive">
                     @if (Model.Count() > 0)
                     {
-                        <table class="table table-bordered" id="tblUsuarios" width="100%" cellspacing="0">
+                        <table class="table table-dark table-striped" id="tblUsuarios" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
                                     <th>@Html.DisplayNameFor(m =>m.ID)</th>
@@ -33,12 +33,12 @@
                                         <td>@Html.DisplayFor(m =>item.Telefono)</td>
                                         <td>@Html.DisplayFor(m =>item.Email)</td>
 
-                                        <td>
-                                            <button class="btn btn-warning" data-bs-toggle="modal" data-bs-target="@("#ModalEditar-"+item.ID)" data-url="@Url.Action($"Editar/{item.ID}")"> <i class="bi bi-pencil-fill"></i> Editar</button>
+                                        <td >
+                                            <button class="btn btn-warning text-white" data-bs-toggle="modal" data-bs-target="@("#ModalEditar-"+item.ID)" data-url="@Url.Action($"Editar/{item.ID}")"> <i class="bi bi-pencil-fill"></i> Editar</button>
                                             @await Html.PartialAsync("Editar",item)
-                                            <button class="btn btn-info" data-bs-toggle="modal" data-bs-target="@("#ModalDetalles-"+item.ID)" data-url="@Url.Action($"detalle/{item.ID}")"> <i class="bi bi-info-circle"></i> Detalle</button>
+                                            <button class="btn btn-info text-white"  data-bs-toggle="modal" data-bs-target="@("#ModalDetalles-"+item.ID)" data-url="@Url.Action($"detalle/{item.ID}")"> <i class="bi bi-info-circle"></i> Detalle</button>
                                             @await Html.PartialAsync("detalle",item)
-                                            <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="@("#ModalEliminar-"+item.ID)" data-url="@Url.Action($"Eliminar/{item.ID}")"> <i class="bi bi-eraser-fill"></i> Eliminar</button>
+                                            <button class="btn btn-danger text-white" data-bs-toggle="modal" data-bs-target="@("#ModalEliminar-"+item.ID)" data-url="@Url.Action($"Eliminar/{item.ID}")"> <i class="bi bi-eraser-fill"></i> Eliminar</button>
                                             @await Html.PartialAsync("Eliminar",item)
                                             
                                         </td>
