letra editar y eliminar

--- a/CRUDASP/Views/Inicio/Editar.cshtml
+++ b/CRUDASP/Views/Inicio/Editar.cshtml
@@ -20,7 +20,7 @@
                                 </h3>
                             </div>
                             <card_body>
-                                <form asp-action="Editar" method="post">
+                                <form asp-action="Editar" method="post" class="text-black">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-group">
                                         
