--- a/CRUDASP/Views/Inicio/Eliminar.cshtml
+++ b/CRUDASP/Views/Inicio/Eliminar.cshtml
@@ -21,7 +21,7 @@
                                 </h3>
                             </div>
                             <card_body>
-                                <form asp-action="Eliminar" method="post">
+                                <form asp-action="Eliminar" method="post" class="text-black">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-group">
                                         
