--- a/CRUDASP/Views/Inicio/Editar.cshtml
+++ b/CRUDASP/Views/Inicio/Editar.cshtml
@@ -7,18 +7,17 @@
 <div class="modal fade" id="ModalEditar-@Model.ID" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header bg-warning">
+                <h3 class="text-dark">
+                    <strong>Editar  usuario</strong>
+                </h3>
                 <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="row">
                     <div class="offset-12">
                         <div class="card ">
-                            <div class="card-header bg-warning">
-                                <h3 class="text-dark">
-                                    <strong>Editar  usuario</strong>
-                                </h3>
-                            </div>
+                            
                             <card_body>
                                 <form asp-action="Editar" method="post" class="text-black">
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
