--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="offset-12">
         <div class="card border">
             <div class="card-header bg-dark">
-                <h3 class="text-white"><strong>Lista de Usuarios</strong></h3>
+                <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -17,18 +17,20 @@
                         <table class="table table-dark table-striped" id="tblUsuarios" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
-                                    <th>@Html.DisplayNameFor(m =>m.ID)</th>
+                                    <th> </th>
                                     <th>@Html.DisplayNameFor(m =>m.Nombre)</th>
                                     <th>@Html.DisplayNameFor(m =>m.Telefono)</th>
                                     <th>@Html.DisplayNameFor(m =>m.Email)</th>
-                                    <th>Acciones</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 @foreach (var item in Model)
                                 {
                                     <tr>
-                                        <td>@Html.DisplayFor(m =>item.ID)</td>
+                                         <td>
+                                            <i class="bi bi-person-lines-fill"></i>
+                                         </td>
                                         <td>@Html.DisplayFor(m =>item.Nombre)</td>
                                         <td>@Html.DisplayFor(m =>item.Telefono)</td>
                                         <td>@Html.DisplayFor(m =>item.Email)</td>
