--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -10,13 +10,14 @@
         <div class="card border">
             <div class="card-header bg-dark">
                 <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
+                <button class="btn btn-danger text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
             </div>
-            <div class="card-body">
+            <div class="card-body ">
                 <div class="table-responsive">
                     @if (Model.Count() > 0)
                     {
                         <table class="table table-dark table-striped" id="tblUsuarios" width="100%" cellspacing="0">
-                            <thead>
+                            <thead class="mt-4">
                                 <tr>
                                     <th> </th>
                                     <th>@Html.DisplayNameFor(m =>m.Nombre)</th>
@@ -69,6 +70,7 @@
             <i class="bi bi-file-plus-fill"></i> Nuevo Usuario
         </a>
     </div>
+    
 </div>
 
 
