--- a/CRUDASP/Views/Inicio/InicioSesion.cshtml
+++ b/CRUDASP/Views/Inicio/InicioSesion.cshtml
@@ -1,27 +1,33 @@
-﻿<div class="row">
-    <div id="login" class="col-lg-4 offset-lg-4 col-md-6 offset-md-3
-                    col-12">
-        <h2 class="text-center">Bienvenido de nuevo</h2>
-        <img class="img-fluid mx-auto d-block rounded" src="https://picsum.photos/id/870/300/200" />
+﻿@{
+    ViewData["Title"] = "Iniciar Sesion";
+}
 
-        <form>
-            <div class="form-group">
-                <label for="correo">Correo</label>
-                <input id="correo" name="correo"
-                       class="form-control" type="email"
-                       placeholder="Correo electrónico">
+
+<!-- Modal ELiminar-->
+<div class="modal fade" id="ModalEliminar-@Model.ID" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header bg-danger">
+                <h3 class="text-white">
+                    <strong>Eliminar Usuario</strong>
+                </h3>
+                <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="form-group">
-                <label for="palabraSecreta">Contraseña</label>
-                <input id="palabraSecreta" name="palabraSecreta"
-                       class="form-control" type="password"
-                       placeholder="Contraseña">
+            <div class="modal-body">
+                
+               
             </div>
-            <a asp-controller="ValUsuario" asp-action="ListaUsuarios" class="btn btn-success d-block mx-auto btn-lg">
-                <i class="bi bi-file-plus-fill"></i> Ingresar
-            </a>
-            <br>
-            <a href="#">Contraseña olvidada</a>
-        </form>
+
+        </div>
     </div>
 </div>
+
+
+
+
+
+
+
+
+
+
