--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -9,8 +9,14 @@
     <div class="offset-15">
         <div class="card border">
             <div class="card-header bg-dark">
-                <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
-                <button class="btn btn-danger text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
+              <div class="row">
+                    <div class=" col">
+                        <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
+                    </div>
+                    <div class=" col">
+                        <button class="btn btn-danger text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
+                    </div>
+              </div>
             </div>
             <div class="card-body ">
                 <div class="table-responsive">
