--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -13,8 +13,11 @@
                     <div class=" col">
                         <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
                     </div>
-                    <div class=" col">
-                        <button class="btn btn-danger text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
+                    <div class=" col-2">
+                        <button class="btn btn-outline-success text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
+                    </div>
+                    <div class=" col-2">
+                        <button class="btn btn-outline-light text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Registrarse </button>
                     </div>
               </div>
             </div>
