--- a/CRUDASP/Views/Inicio/Index.cshtml
+++ b/CRUDASP/Views/Inicio/Index.cshtml
@@ -14,10 +14,12 @@
                         <h3 class="text-white"><strong><i class="bi bi-clipboard2"></i>  Contactos</strong></h3>
                     </div>
                     <div class=" col-2">
-                        <button class="btn btn-outline-success text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Iniciar Sesion</button>
+                        <button class="btn btn-outline-success text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")" data-url="@Url.Action($"IniciarSesion")"> <i class="bi bi-box-arrow-in-right"></i> Iniciar Sesion</button>
+                   
+
                     </div>
                     <div class=" col-2">
-                        <button class="btn btn-outline-light text-white" data-bs-toggle="modal" data-bs-target="@("#IniciarSesion")"> <i class="bi bi-eraser-fill"></i> Registrarse </button>
+                        <a class="btn btn-outline-light text-white" asp-action="CrearUsuario" asp-controller="Inicio"> <i class="bi bi-plus-square"></i> Registrarse </a>
                     </div>
               </div>
             </div>
